fixed feature card alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ body {
 }
 
 .feature-card {
-	width: 30.2%;
+	width: 30%;
 	float: left;
 	margin: 0 15px;
 
